# scratch-Plus-Plus

./: CMakeLists.txt  README.md  main.cpp  parser.hpp  planning.txt  project.hpp  test.cpp
documentation/: codestandards.txt  planning.txt  requirements.txt  todo
src/: parser.hpp  project.hpp
src/compiler/: main.cpp  parser.hpp  project.hpp  test.cpp
src/lib/: pen.cpp  pen.hpp  scratchtdlib.cpp  scratchtdlib.hpp
